<resources>
    <string name="app_name">ElderlyCare</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    // login screen
    <string name="login_label">Đăng nhập tài khoản</string>
    <string name="login_bt_login">Đăng nhập</string>
    <string name="login_phone_number">Số điện thoại</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_question_1">Bạn đã quên mật khẩu?</string>
    <string name="login_question_2">Bạn chưa có tài khoản?</string>
    <string name="login_sign_up"><u>Đăng kí tài khoản</u></string>
    <string name="login_click_here"><u>Nhấn vào đây</u></string>
    <string name="login_error_msg_edittext_empty"><u>"Bạn cần nhập thông tin đầy đủ"</u></string>
    <string name="login_txt_enter_code_otp">Nhập mã otp được gửi đến số điện thoại %s</string>


    // re-ex event fragment
    <string name="re_ex_display_address">Địa chỉ tái khám: %s</string>
    <string name="re_ex_display_day_begin">Ngày tái khám: %s</string>
    <string name="re_ex_display_disease_name">Tái khám bệnh: %s</string>

    // exercise event fragment
    <string name="exercise_display_exercise_name">Tên bài tập: %s</string>

    // profile fragment
    <string name="profile_display_weight">%s kg</string>
    <string name="profile_display_height">%s cm</string>

    // addExerciseFragment
    <string name="add_exercise_screen">Thêm lịch tập thể dục</string>
    <string name="addEx_hour_minutes">%s:%s</string>

    // addMedicineFragment
    <string name="add_medicine_pick_date">Chọn ngày</string>
    <string name="add_medicine_screen">Thêm lịch uống thuốc</string>

    // addReExFragment
    <string name="add_re_ex_pick_date">Vui lòng chọn ngày tái khám</string>
    <string name="add_re_ex_screen">Thêm lịch tái khám</string>

    // display exercise event fragment
    <string name="display_ex_time">%s:%s</string>

    // display medicine event fragment
    <string name="display_medicine_time">%s:%s</string>
    <string name="display_medicine_day_begin_end">Từ %s đến %s</string>

    // display re-examination event fragment
    <string name="display_re_ex_time">%s:%s</string>

    //title screen
    <string name="no_title"> </string>
    <string name="update_screen"> Chỉnh sửa</string>


    // forget password screen
    <string name="forget_pw_title">Quên mật khẩu</string>

    // time
    <string name="month_year">Tháng %s - năm %s</string>
    <string name="day_month_year">%s/%s/%s</string>
    <string name="hour_minutes">%s:%s</string>
    <string name="hour_minutes_duration">%s:%s - %s ngày</string>
    <string name="hour_minutes_day">%s:%s - %s</string>

    // item
    <string name="item_medicine_dose">%s liều/ngày</string>
    <string name="item_medicine_disease_name">Thuốc điều trị bệnh: %s</string>

    // child key firebase
    <string name="key_customer_info">CustomerInfo</string>
    <string name="key_health_param">HealthParam</string>
    <string name="key_event">Event</string>
    <string name="key_location">location</string>

    //item avg heart rate
    <string name="item_avg_display_day">Ngày: %s</string>
    <string name="item_avg_display_heart_rate">%s bmp</string>

    //item oxygen rate
    <string name="item_avg_display_oxygen">%s %%</string>


    // list tỉnh thành
    <string-array name="list_prefecture">
        <item>Hồ Chí Minh</item>
        <item>Bà Rịa Vũng Tàu</item>
        <item>Đà Nẵng</item>
        <item>Lâm Đồng</item>
        <item>Bình Thuận</item>
        <item>Ninh Thuận</item>
        <item>Đồng Nai</item>
    </string-array>


</resources>