<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="com.project.elderlyhealthcare.presentation.viewmodels.not_login.NotLoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".presentation.fragment.not_login.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/background_login"
            app:layout_constraintBottom_toTopOf="@id/reg_gl_horizontal_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_tv_login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefinsans_bold"
            android:text="@string/login_label"
            android:textColor="@color/login_blue"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/login_layout_ed_phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_layout_ed_phoneNumber"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/login_phone_number"
            app:endIconMode="clear_text"
            bind:boxStrokeWidthFocused="0.7dp"
            bind:hintTextColor="@color/black"
            bind:boxStrokeColor="@color/black"
            app:counterMaxLength="20"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/login_tv_login_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_ed_phone_number"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:maxLength="20"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_layout_ed_password"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/login_password"
            bind:boxStrokeWidthFocused="0.7dp"
            app:endIconMode="password_toggle"
            bind:hintTextColor="@color/black"
            bind:boxStrokeColor="@color/black"
            app:counterMaxLength="20"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/login_layout_ed_phoneNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_ed_password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_question_1"
            android:textColor="@color/black"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@id/login_tv_click_here"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toBottomOf="@+id/login_layout_ed_password" />


        <TextView
            android:id="@+id/login_tv_click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/login_click_here"
            android:textColor="@color/login_blue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/login_layout_ed_password"
            app:layout_constraintTop_toBottomOf="@id/login_layout_ed_password" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_button"
            android:text="@string/login_bt_login"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/reg_gl_horizontal_2" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/login_bt_login"
            app:layout_constraintStart_toStartOf="@+id/login_bt_login"

            app:layout_constraintTop_toBottomOf="@id/login_bt_login">

            <TextView
                android:id="@+id/login_tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/login_question_2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/login_tv_register" />

            <TextView
                android:id="@+id/login_tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/login_sign_up"
                android:textColor="@color/login_blue"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/reg_gl_horizontal_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/reg_gl_horizontal_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>